Rewrite task 28